# bt_manipulation_framework

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  python xml changeline - Google Search.html  upstream.repos
ar_marker_detector/: CMakeLists.txt  package.xml
ar_marker_detector/config/: realsense_calibration.yaml
ar_marker_detector/launch/: skill_find_objects.launch  tf_camera_link.launch
ar_marker_detector/script/: find_objects.py  get_marker_pose_fake.py
detect_aruco_marker_skill/: CMakeLists.txt  package.xml
detect_aruco_marker_skill/action/: ArucoMarkerDetection.action
detect_aruco_marker_skill/config/: params.yaml
detect_aruco_marker_skill/include/detect_aruco_marker_skill/: detect_aruco_marker_action_server.hpp
detect_aruco_marker_skill/launch/: call_detect_aruco_marker_action_server.launch.py  mock_aruco_marker_pub.launch.py  start_detect_aruco_marker_action_server.launch.py
detect_aruco_marker_skill/src/: detect_aruco_marker_action_server.cpp  main_detect_aruco_marker_action_server.cpp
man2_behavior_tree/: CMakeLists.txt  package.xml
man2_behavior_tree/include/man2_behavior_tree/: behavior_tree_engine.hpp  bt_action_client_node.hpp  bt_conversions.hpp  bt_service_client_node.hpp
man2_behavior_tree/src/: behavior_tree_engine.cpp
man2_behavior_tree/src/util_plugins/: print_value.cpp
man2_behavior_tree/test/: CMakeLists.txt  test_bt_action_client_node.cpp  test_bt_service_client_node.cpp
man2_bt_bringup/: CMakeLists.txt  package.xml
man2_bt_bringup/config/: moveitcpp.yaml  params.yaml  path_constraints.yaml
man2_bt_bringup/launch/: all_bringup.launch.py  call_start_application.launch.py  operator_bringup.launch.py
man2_bt_bringup/trees/: simple_tree.xml
man2_bt_operator/: CMakeLists.txt  package.xml
man2_bt_operator/config/: params.yaml
man2_bt_operator/include/man2_bt_operator/: bt_operator.hpp
man2_bt_operator/launch/: bringup_tree.launch.py  call_start_application.launch.py
man2_bt_operator/src/: bt_operator.cpp  bt_operator_action.cpp  main.cpp
man2_bt_operator/trees/: 2_simple_tree.xml  simple_tree.xml
man2_bt_perception_skills/: CMakeLists.txt  package.xml
man2_bt_perception_skills/include/man2_bt_perception_skills/: detect_aruco_marker.hpp
man2_bt_perception_skills/launch/: mock_aruco_marker_pub.launch.py
man2_bt_perception_skills/src/: detect_aruco_marker.cpp
man2_bt_skill_clients/: CMakeLists.txt  package.xml
man2_bt_skill_clients/include/man2_bt_skill_clients/: print_value.hpp
man2_bt_skill_clients/src/: print_value.cpp
man2_bt_skill_clients/src/action_clients/: compute_path_to_point_action_bt_client.cpp  compute_path_to_pose_action_bt_client.cpp  compute_path_to_state_action_bt_client.cpp  detect_aruco_marker_action_bt_client.cpp  execute_trajectory_action_bt_client.cpp  get_current_ik_frame_pose_action_bt_client.cpp
man2_bt_skill_clients/src/service_clients/: set_path_constraints_bt_client.cpp
man2_bt_skills/: CMakeLists.txt  package.xml
man2_bt_skills/include/man2_bt_skills/: detect_aruco_marker.hpp
man2_bt_skills/launch/: mock_aruco_marker_pub.launch.py
man2_bt_skills/src/: detect_aruco_marker.cpp
man2_msgs/: CMakeLists.txt  (+1 more)
man2_skill_server_core/: CMakeLists.txt  package.xml
man2_skill_server_core/include/man2_skill_server_core/: skill_action_server_lifecycle_core.hpp
man_behavior_tree_nodes/: CMakeLists.txt  ReadMe.md  package.xml
man_behavior_tree_nodes/include/man_behavior_tree_nodes/: back.h  bt_action_client.hpp  bt_action_client_subscriber.hpp  bt_conversions.hpp  bt_engine.hpp  bt_service_client.hpp  webots_elements.hpp
man_behavior_tree_nodes/src/: bt_engine.cpp  webots_elements.cpp
man_behavior_tree_nodes/src/bt_skill_nodes/: call_extern_help_service_client.cpp  compute_path_action_client.cpp  execute_gripper_trajectory_action_client.cpp  execute_trajectory_action_client.cpp  execute_trajectory_arm_action_client.cpp  find_objects_action_client.cpp  set_flag_task_service_client.cpp  set_param_service_client.cpp  update_arm_goal_service_client.cpp  update_goal_service_client.cpp  update_param_service_client.cpp
man_bt_operator/: CMakeLists.txt  package.xml
man_bt_operator/include/man_bt_operator/: bt_manipulator.hpp  bt_operator.hpp  bt_ros_bridge.hpp
man_bt_operator/job_definitions/: job_pickplace copy.json
man_bt_operator/src/: bt_manipulator.cpp  bt_operator.cpp  bt_ros_bridge.cpp  bt_run_success.cpp  main.cpp  sub_main.cpp
man_msgs/: CMakeLists.txt  package.xml
man_msgs/action/: ComputePathSkill.action  ExecuteGripperIO.action  ExecuteGripperTrajectory.action  ExecuteTrajectorySkill.action  FindObjects.action
man_msgs/msg/: ParameterMsg.msg  Plan.msg
man_msgs/srv/: CheckCollisionService.srv  GetMarkerPose.srv  Help.srv  SetFlagTask.srv  SetParameter.srv  UpdateArmGoal.srv  UpdateArmState.srv  UpdateParam.srv
manipulator_skills/: CMakeLists.txt  package.xml  setup.py
manipulator_skills/include/manipulator_skills/: skill.h  skill.hpp  skill_names.h  skill_names.hpp  webots_elements.hpp
manipulator_skills/src/: webots_elements.cpp
manipulator_skills/src/skills/: compute_path_skill.cpp  test_compute_path.cpp
moveit_skills/: CMakeLists.txt  package.xml
moveit_skills/action/: ComputePathToPoint.action  ComputePathToPose.action  ComputePathToState.action  ExecuteTrajectory.action  GetCurrentEndEffctorPose.action  GetCurrentIKFramePose.action
moveit_skills/config/: params.yaml
moveit_skills/include/moveit_skills/: compute_path_action_server_core.hpp  compute_path_action_server_core_impl.hpp  compute_path_to_point_action_server.hpp  compute_path_to_state_action_server.hpp  moveit_skill_server.hpp
moveit_skills/launch/: call_point_action_server.launch.py  call_state_action_server.launch.py  start_server.launch.py
moveit_skills/msg/: ComputePathResult.msg  PlanConfig.msg
moveit_skills/src/: compute_path_to_point_action_server.cpp  compute_path_to_state_action_server.cpp  main_moveit_skill_server.cpp  main_set_path_constrains.cpp  moveit_skill_server.cpp
moveit_skills/srv/: SetPathConstrains.srv
(+196 files in other folders)
