<?xml version="1.0"?>
<package format="2">
  <name>ar_marker_detector</name>
  <version>0.0.0</version>
  <description>The ar_marker_detector package</description>
  <maintainer email="ruichao.wu@ipa.frauhofer.de">Ruichao Wu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ar_track_alvar</exec_depend>
  <exec_depend>man_msgs</exec_depend>
</package>
